dataset1235/2025-2/610742602/users/4180041627/executions/677928262_3902794658.log
== RUN (2025-08-21 21:11:59)
-- CODE: 
"Nome:Lucas Nogueira"
"Idade:18"
"Altura:1,68"
print(nome)
print(idade)
print(altura)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Teresa
13
1.45
---- correct output:
Nome: Teresa
Idade: 13
Altura: 1.45
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(nome)
          ^^^^
NameError: name 'nome' is not defined. Did you mean: 'None'?
-- TEST CASE 2:
---- input:
Marcelo
34
1.79
---- correct output:
Nome: Marcelo
Idade: 34
Altura: 1.79
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(nome)
          ^^^^
NameError: name 'nome' is not defined. Did you mean: 'None'?
-- TEST CASE 3:
---- input:
Larissa
23
1.68
---- correct output:
Nome: Larissa
Idade: 23
Altura: 1.68
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(nome)
          ^^^^
NameError: name 'nome' is not defined. Did you mean: 'None'?
-- TEST CASE 4:
---- input:
Jose
45
1.89
---- correct output:
Nome: Jose
Idade: 45
Altura: 1.89
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(nome)
          ^^^^
NameError: name 'nome' is not defined. Did you mean: 'None'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 21:11:57)
-- CODE: 
"Nome:Lucas Nogueira"
"Idade:18"
"Altura:1,68"
print(nome)
print(idade)
print(altura)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Teresa
13
1.45
---- correct output:
Nome: Teresa
Idade: 13
Altura: 1.45
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(nome)
          ^^^^
NameError: name 'nome' is not defined. Did you mean: 'None'?
-- TEST CASE 2:
---- input:
Marcelo
34
1.79
---- correct output:
Nome: Marcelo
Idade: 34
Altura: 1.79
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(nome)
          ^^^^
NameError: name 'nome' is not defined. Did you mean: 'None'?
-- TEST CASE 3:
---- input:
Larissa
23
1.68
---- correct output:
Nome: Larissa
Idade: 23
Altura: 1.68
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(nome)
          ^^^^
NameError: name 'nome' is not defined. Did you mean: 'None'?
-- TEST CASE 4:
---- input:
Jose
45
1.89
---- correct output:
Nome: Jose
Idade: 45
Altura: 1.89
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(nome)
          ^^^^
NameError: name 'nome' is not defined. Did you mean: 'None'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 20:05:20)
-- CODE: 
Nome = input("Insira seu nome")
Idade = int(input("Insira sua idade"))
Altura = float(input("Insira sua altura"))

print("Nome:",Nome)
print("Idade:",Idade)
print("Altura:",Altura)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Teresa
13
1.45
---- correct output:
Nome: Teresa
Idade: 13
Altura: 1.45
---- user output:
Altura: 1.45
-- TEST CASE 2:
---- input:
Marcelo
34
1.79
---- correct output:
Nome: Marcelo
Idade: 34
Altura: 1.79
---- user output:
Altura: 1.79
-- TEST CASE 3:
---- input:
Larissa
23
1.68
---- correct output:
Nome: Larissa
Idade: 23
Altura: 1.68
---- user output:
Altura: 1.68
-- TEST CASE 4:
---- input:
Jose
45
1.89
---- correct output:
Nome: Jose
Idade: 45
Altura: 1.89
---- user output:
Altura: 1.89
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 20:05:22)
-- CODE: 
Nome = input("Insira seu nome")
Idade = int(input("Insira sua idade"))
Altura = float(input("Insira sua altura"))

print("Nome:",Nome)
print("Idade:",Idade)
print("Altura:",Altura)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
Teresa
13
1.45
---- correct output:
Nome: Teresa
Idade: 13
Altura: 1.45
---- user output:
Altura: 1.45
-- TEST CASE 2:
---- input:
Marcelo
34
1.79
---- correct output:
Nome: Marcelo
Idade: 34
Altura: 1.79
---- user output:
Altura: 1.79
-- TEST CASE 3:
---- input:
Larissa
23
1.68
---- correct output:
Nome: Larissa
Idade: 23
Altura: 1.68
---- user output:
Altura: 1.68
-- TEST CASE 4:
---- input:
Jose
45
1.89
---- correct output:
Nome: Jose
Idade: 45
Altura: 1.89
---- user output:
Altura: 1.89
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 21:11:09)
-- CODE: 
"Nome:Lucas Nogueira"
"Idade:18"
"Altura:1,68"
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
Teresa
13
1.45
---- correct output:
Nome: Teresa
Idade: 13
Altura: 1.45
---- user output:
None
-- TEST CASE 2:
---- input:
Marcelo
34
1.79
---- correct output:
Nome: Marcelo
Idade: 34
Altura: 1.79
---- user output:
None
-- TEST CASE 3:
---- input:
Larissa
23
1.68
---- correct output:
Nome: Larissa
Idade: 23
Altura: 1.68
---- user output:
None
-- TEST CASE 4:
---- input:
Jose
45
1.89
---- correct output:
Nome: Jose
Idade: 45
Altura: 1.89
---- user output:
None
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 21:26:42)
-- CODE: 
Nome = input("Insira seu nome")
Idade = int(input("Insira sua idade"))
Altura = float(input("Insira sua altura"))

print("Nome:",Nome)
print("Idade:",Idade)
print("Altura:",Altura)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Teresa
13
1.45
---- correct output:
Nome: Teresa
Idade: 13
Altura: 1.45
---- user output:
Altura: 1.45
-- TEST CASE 2:
---- input:
Marcelo
34
1.79
---- correct output:
Nome: Marcelo
Idade: 34
Altura: 1.79
---- user output:
Altura: 1.79
-- TEST CASE 3:
---- input:
Larissa
23
1.68
---- correct output:
Nome: Larissa
Idade: 23
Altura: 1.68
---- user output:
Altura: 1.68
-- TEST CASE 4:
---- input:
Jose
45
1.89
---- correct output:
Nome: Jose
Idade: 45
Altura: 1.89
---- user output:
Altura: 1.89
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 21:14:14)
-- CODE: 
"Nome:Lucas Nogueira"
"Idade:18"
"Altura:168"
"print(nome)"
"print(idade)""
"print(altura)"
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Teresa
13
1.45
---- correct output:
Nome: Teresa
Idade: 13
Altura: 1.45
-- ERROR:
File "XXXX", line 5
    "print(idade)""
                  ^
SyntaxError: unterminated string literal (detected at line 5)
-- TEST CASE 2:
---- input:
Marcelo
34
1.79
---- correct output:
Nome: Marcelo
Idade: 34
Altura: 1.79
-- ERROR:
File "XXXX", line 5
    "print(idade)""
                  ^
SyntaxError: unterminated string literal (detected at line 5)
-- TEST CASE 3:
---- input:
Larissa
23
1.68
---- correct output:
Nome: Larissa
Idade: 23
Altura: 1.68
-- ERROR:
File "XXXX", line 5
    "print(idade)""
                  ^
SyntaxError: unterminated string literal (detected at line 5)
-- TEST CASE 4:
---- input:
Jose
45
1.89
---- correct output:
Nome: Jose
Idade: 45
Altura: 1.89
-- ERROR:
File "XXXX", line 5
    "print(idade)""
                  ^
SyntaxError: unterminated string literal (detected at line 5)
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 21:25:32)
-- CODE: 
Nome = input("Insira seu nome")
Idade = int(Input("Insira sua idade"))
Altura = float(input("Insira sua altura"))

print("Nome:",Nome)
print("Idade:",Idade)
print("Altura:",Altura)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Teresa
13
1.45
---- correct output:
Nome: Teresa
Idade: 13
Altura: 1.45
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    Idade = int(Input("Insira sua idade"))
                ^^^^^
NameError: name 'Input' is not defined. Did you mean: 'input'?
-- TEST CASE 2:
---- input:
Marcelo
34
1.79
---- correct output:
Nome: Marcelo
Idade: 34
Altura: 1.79
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    Idade = int(Input("Insira sua idade"))
                ^^^^^
NameError: name 'Input' is not defined. Did you mean: 'input'?
-- TEST CASE 3:
---- input:
Larissa
23
1.68
---- correct output:
Nome: Larissa
Idade: 23
Altura: 1.68
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    Idade = int(Input("Insira sua idade"))
                ^^^^^
NameError: name 'Input' is not defined. Did you mean: 'input'?
-- TEST CASE 4:
---- input:
Jose
45
1.89
---- correct output:
Nome: Jose
Idade: 45
Altura: 1.89
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    Idade = int(Input("Insira sua idade"))
                ^^^^^
NameError: name 'Input' is not defined. Did you mean: 'input'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 21:26:58)
-- CODE: 
Nome = input("Insira seu nome")
Idade = int(input("Insira sua idade"))
Altura = float(input("Insira sua altura"))

print("Nome:",Nome)
print("Idade:",Idade)
print("Altura:",Altura)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
Teresa
13
1.45
---- correct output:
Nome: Teresa
Idade: 13
Altura: 1.45
---- user output:
Altura: 1.45
-- TEST CASE 2:
---- input:
Marcelo
34
1.79
---- correct output:
Nome: Marcelo
Idade: 34
Altura: 1.79
---- user output:
Altura: 1.79
-- TEST CASE 3:
---- input:
Larissa
23
1.68
---- correct output:
Nome: Larissa
Idade: 23
Altura: 1.68
---- user output:
Altura: 1.68
-- TEST CASE 4:
---- input:
Jose
45
1.89
---- correct output:
Nome: Jose
Idade: 45
Altura: 1.89
---- user output:
Altura: 1.89
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 21:11:20)
-- CODE: 
"Nome:Lucas Nogueira"
"Idade:18"
"Altura:1,68"
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
Teresa
13
1.45
---- correct output:
Nome: Teresa
Idade: 13
Altura: 1.45
---- user output:
None
-- TEST CASE 2:
---- input:
Marcelo
34
1.79
---- correct output:
Nome: Marcelo
Idade: 34
Altura: 1.79
---- user output:
None
-- TEST CASE 3:
---- input:
Larissa
23
1.68
---- correct output:
Nome: Larissa
Idade: 23
Altura: 1.68
---- user output:
None
-- TEST CASE 4:
---- input:
Jose
45
1.89
---- correct output:
Nome: Jose
Idade: 45
Altura: 1.89
---- user output:
None
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 21:12:54)
-- CODE: 
"Nome:Lucas Nogueira"
"Idade:18"
"Altura:168"
print(nome)
print(idade)
print(altura)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Teresa
13
1.45
---- correct output:
Nome: Teresa
Idade: 13
Altura: 1.45
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(nome)
          ^^^^
NameError: name 'nome' is not defined. Did you mean: 'None'?
-- TEST CASE 2:
---- input:
Marcelo
34
1.79
---- correct output:
Nome: Marcelo
Idade: 34
Altura: 1.79
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(nome)
          ^^^^
NameError: name 'nome' is not defined. Did you mean: 'None'?
-- TEST CASE 3:
---- input:
Larissa
23
1.68
---- correct output:
Nome: Larissa
Idade: 23
Altura: 1.68
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(nome)
          ^^^^
NameError: name 'nome' is not defined. Did you mean: 'None'?
-- TEST CASE 4:
---- input:
Jose
45
1.89
---- correct output:
Nome: Jose
Idade: 45
Altura: 1.89
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(nome)
          ^^^^
NameError: name 'nome' is not defined. Did you mean: 'None'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 21:12:52)
-- CODE: 
"Nome:Lucas Nogueira"
"Idade:18"
"Altura:168"
print(nome)
print(idade)
print(altura)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Teresa
13
1.45
---- correct output:
Nome: Teresa
Idade: 13
Altura: 1.45
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(nome)
          ^^^^
NameError: name 'nome' is not defined. Did you mean: 'None'?
-- TEST CASE 2:
---- input:
Marcelo
34
1.79
---- correct output:
Nome: Marcelo
Idade: 34
Altura: 1.79
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(nome)
          ^^^^
NameError: name 'nome' is not defined. Did you mean: 'None'?
-- TEST CASE 3:
---- input:
Larissa
23
1.68
---- correct output:
Nome: Larissa
Idade: 23
Altura: 1.68
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(nome)
          ^^^^
NameError: name 'nome' is not defined. Did you mean: 'None'?
-- TEST CASE 4:
---- input:
Jose
45
1.89
---- correct output:
Nome: Jose
Idade: 45
Altura: 1.89
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(nome)
          ^^^^
NameError: name 'nome' is not defined. Did you mean: 'None'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 21:25:58)
-- CODE: 
Nome = input("Insira seu nome")
Idade = int(Input("Insira sua idade"))
Altura = float(input("Insira sua altura"))

print("Nome:",Nome)
print("Idade:",Idade)
print("Altura:",Altura)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Teresa
13
1.45
---- correct output:
Nome: Teresa
Idade: 13
Altura: 1.45
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    Idade = int(Input("Insira sua idade"))
                ^^^^^
NameError: name 'Input' is not defined. Did you mean: 'input'?
-- TEST CASE 2:
---- input:
Marcelo
34
1.79
---- correct output:
Nome: Marcelo
Idade: 34
Altura: 1.79
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    Idade = int(Input("Insira sua idade"))
                ^^^^^
NameError: name 'Input' is not defined. Did you mean: 'input'?
-- TEST CASE 3:
---- input:
Larissa
23
1.68
---- correct output:
Nome: Larissa
Idade: 23
Altura: 1.68
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    Idade = int(Input("Insira sua idade"))
                ^^^^^
NameError: name 'Input' is not defined. Did you mean: 'input'?
-- TEST CASE 4:
---- input:
Jose
45
1.89
---- correct output:
Nome: Jose
Idade: 45
Altura: 1.89
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    Idade = int(Input("Insira sua idade"))
                ^^^^^
NameError: name 'Input' is not defined. Did you mean: 'input'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 21:11:05)
-- CODE: 
"Nome:Lucas Nogueira"
"Idade:18"
"Altura:1,68"
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Teresa
13
1.45
---- correct output:
Nome: Teresa
Idade: 13
Altura: 1.45
---- user output:
None
-- TEST CASE 2:
---- input:
Marcelo
34
1.79
---- correct output:
Nome: Marcelo
Idade: 34
Altura: 1.79
---- user output:
None
-- TEST CASE 3:
---- input:
Larissa
23
1.68
---- correct output:
Nome: Larissa
Idade: 23
Altura: 1.68
---- user output:
None
-- TEST CASE 4:
---- input:
Jose
45
1.89
---- correct output:
Nome: Jose
Idade: 45
Altura: 1.89
---- user output:
None
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
